--- a/src/components/app-theme/app-theme.css
+++ b/src/components/app-theme/app-theme.css
@@ -68,23 +68,28 @@ legend, label {
 .radio-wrapper {
   display: flex;
   height: 10rem;
-  margin: 1rem;
   border: 1px solid var(--menu-border-color);
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
 .radio-group {
   display: flex;
   align-items: center;
   padding-left: 1.2rem;
-  width: 15rem;
+  width: calc(100% - 10rem);
   min-width: 10rem;
-  max-width: 15rem;
   background: var(--card-bg-color);
   border-right: 1px solid var(--menu-border-color);
 }
 
+form {
+  width: 100%;
+  max-width: 35rem;
+}
+
 fieldset {
-  width: 99%;
+  width: 100%;
   border: 2px solid var(--text-color);
   border-radius: 0.2rem;
 }
