--- a/src/components/preview-theme/preview-theme.css
+++ b/src/components/preview-theme/preview-theme.css
@@ -6,6 +6,7 @@ so-preview-theme {
   flex: 1;
   display: flex;
   flex-direction: column;
+  max-width: 10rem;
 }
 
 .sidebar {
